--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.7.7"
+  }
 }
